--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
       <div style="position: relative; padding-bottom: 50px; text-align: center;">
-        <h1 class = "title">Happy Birthday Dad! </h1>
+        <h1 class = "title">Happy Birthday Dad!! </h1>
         <h1 class = "title">Please scroll slowly.</h1>
       </div>
       <img src="images/FullSizeRender 5_Original.jpg" class = "rellax" data-rellax-speed = 10 style="width: 35%; height: 355; top: 40%; left: 60%; position: absolute;">
